Bug 449560 - Display Configuration confirmation dialog isn't shown properly
Summary: Display Configuration confirmation dialog isn't shown properly
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kscreen (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords: regression
: 450005 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-02-03 14:47 UTC by Schlaefer
Modified: 2022-02-16 14:18 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments
Display Configuration doesn't preset confirmation (789.97 KB, video/x-matroska)
2022-02-03 14:47 UTC, Schlaefer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Schlaefer 2022-02-03 14:47:38 UTC
Created attachment 146226 [details]
Display Configuration doesn't preset confirmation

SUMMARY

The dialog confirming or aborting a display configuration change isn't shown, but only observable when dismissed.

STEPS TO REPRODUCE
1. Open System Settings → Display Configuration
2. Change a setting and hit Apply

OBSERVED RESULT

- The configuration is applied
- No confirmation dialog is shown
- Clicking somewhere in the window or hitting escape shows the dialog flying-out animation though, but nothing else before that

See attached video.

EXPECTED RESULT

The confirmation dialog should be shown properly

SOFTWARE/OS VERSIONS
Operating System: EndeavourOS
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.16.4-242-tkg-cacule (64-bit)
Graphics Platform: Wayland
Processors: 12 × 11th Gen Intel® Core™ i5-11400 @ 2.60GHz
Memory: 31,2 GiB of RAM
Graphics Processor: AMD Radeon RX 5500 XT
Comment 1 Méven Car 2022-02-03 18:32:39 UTC
Hmm was Kirigami.OverlaySheet changed recently ?

I worked on this in December this worked fine.
Comment 2 Méven Car 2022-02-03 18:36:22 UTC
This is not reproducible when launching the kcm using `kcmshell kscreen` seems like a systemsettings issue
Comment 3 Patrick Silva 2022-02-08 14:04:17 UTC
Same problem on Arch Linux after update to Plasma 5.24.

Operating System: Arch Linux
KDE Plasma Version: 5.24.0
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 4 Vladimir Yerilov 2022-02-09 14:42:10 UTC
Yes, can confirm. No message is visible in Wayland, but it works in X.
Comment 5 Patrick Silva 2022-02-11 13:48:05 UTC
*** Bug 450005 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2022-02-11 16:00:03 UTC
In progress with https://invent.kde.org/plasma/kscreen/-/merge_requests/84.
Comment 7 Nate Graham 2022-02-14 18:10:40 UTC
Git commit ace233909b485b2293e871996e66724d9f2fa9e2 by Nate Graham, on behalf of Xuetian Weng.
Committed on 14/02/2022 at 18:10.
Pushed by ngraham into branch 'master'.

KCM: Workaround unknown Qt issue that causes the revert dialog to be invisible

A better long-term fix is being discussed in
https://invent.kde.org/plasma/kscreen/-/issues/4.
FIXED-IN: 5.24.1

M  +3    -1    kcm/kcm.cpp

https://invent.kde.org/plasma/kscreen/commit/ace233909b485b2293e871996e66724d9f2fa9e2
Comment 8 Nate Graham 2022-02-14 18:11:12 UTC
Git commit 3fb6eb435b752981721e152c39c7d0fbf589042e by Nate Graham, on behalf of Xuetian Weng.
Committed on 14/02/2022 at 18:11.
Pushed by ngraham into branch 'Plasma/5.24'.

KCM: Workaround unknown Qt issue that causes the revert dialog to be invisible

A better long-term fix is being discussed in
https://invent.kde.org/plasma/kscreen/-/issues/4.
FIXED-IN: 5.24.1


(cherry picked from commit ace233909b485b2293e871996e66724d9f2fa9e2)

M  +3    -1    kcm/kcm.cpp

https://invent.kde.org/plasma/kscreen/commit/3fb6eb435b752981721e152c39c7d0fbf589042e