KCM: Workaround unknown Qt issue that causes the revert dialog to be invisible

A better long-term fix is being discussed in
https://invent.kde.org/plasma/kscreen/-/issues/4.

BUG: 449560
FIXED-IN: 5.24.1